--- a/package.json
+++ b/package.json
@@ -5,26 +5,28 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.5.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^8.1.3",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^5.1.9",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "yarn": "^1.22.22"
+    "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
+    "typescript": "~4.1.5",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
-    "@types/react": "^18.2.48",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.18",
-    "@types/react-router-dom": "^5.1.9"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.34"
   },
   "scripts": {
     "start": "react-scripts start",
