--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.0",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,6 +18,7 @@
     "react-router-dom": "^5.1.9",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
+    "swiper": "^8.3.1",
     "typescript": "~4.1.5",
     "web-vitals": "^2.1.4"
   },
